--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
+.App {
+  font-family: "Rubik", sans-serif;
+  color: #382422;
+}
 html {
-  background:#fef6f2;
- 
+  background: #fef6f2;
 }
 h1 {
   font-weight: 600;
@@ -9,15 +12,22 @@ h1 {
 p {
   font-size: 150%;
 }
-.App
-{
-  font-family: 'Rubik', sans-serif;
-  color: #382422;
+/* About section */
+.about {
+  padding-top: 5%;
+  padding-bottom: 15%;
 }
+.avatar-img {
+  height: 80%;
+  width: 80%;
+}
+
+/* Learn More button */
 * {
   box-sizing: border-box;
 }
-*::before, *::after {
+*::before,
+*::after {
   box-sizing: border-box;
 }
 button {
@@ -40,15 +50,20 @@ button.learn-more {
   border: 2px solid #ba5229;
   border-radius: 0.75em;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-  -webkit-transition: background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
-  transition: background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
-  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1);
-  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), background 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transform-style: preserve-3d;
+  -webkit-transition: background 150ms cubic-bezier(0, 0, 0.58, 1),
+    -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: background 150ms cubic-bezier(0, 0, 0.58, 1),
+    -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    background 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    background 150ms cubic-bezier(0, 0, 0.58, 1),
+    -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 button.learn-more::before {
   position: absolute;
-  content: '';
+  content: "";
   width: 100%;
   height: 100%;
   top: 0;
@@ -59,29 +74,34 @@ button.learn-more::before {
   border-radius: inherit;
   box-shadow: 0 0 0 2px #ba5229, 0 0.625em 0 0 #ffd0bd;
   -webkit-transform: translate3d(0, 0.75em, -1em);
-          transform: translate3d(0, 0.75em, -1em);
-  -webkit-transition: box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
-  transition: box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
-  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
-  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1), box-shadow 150ms cubic-bezier(0, 0, 0.58, 1), -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transform: translate3d(0, 0.75em, -1em);
+  -webkit-transition: box-shadow 150ms cubic-bezier(0, 0, 0.58, 1),
+    -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: box-shadow 150ms cubic-bezier(0, 0, 0.58, 1),
+    -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    box-shadow 150ms cubic-bezier(0, 0, 0.58, 1);
+  transition: transform 150ms cubic-bezier(0, 0, 0.58, 1),
+    box-shadow 150ms cubic-bezier(0, 0, 0.58, 1),
+    -webkit-transform 150ms cubic-bezier(0, 0, 0.58, 1);
 }
 button.learn-more:hover {
   background: #ffcbb7;
   -webkit-transform: translate(0, 0.25em);
-          transform: translate(0, 0.25em);
+  transform: translate(0, 0.25em);
 }
 button.learn-more:hover::before {
   box-shadow: 0 0 0 2px #ba5229, 0 0.5em 0 0 #ffd0bd;
   -webkit-transform: translate3d(0, 0.5em, -1em);
-          transform: translate3d(0, 0.5em, -1em);
+  transform: translate3d(0, 0.5em, -1em);
 }
 button.learn-more:active {
   background: #ffcbb7;
   -webkit-transform: translate(0em, 0.75em);
-          transform: translate(0em, 0.75em);
+  transform: translate(0em, 0.75em);
 }
 button.learn-more:active::before {
   box-shadow: 0 0 0 2px #ba5229, 0 0 #ffd0bd;
   -webkit-transform: translate3d(0, 0, -1em);
-          transform: translate3d(0, 0, -1em);
+  transform: translate3d(0, 0, -1em);
 }
