--- a/src/App.css
+++ b/src/App.css
@@ -169,7 +169,6 @@ a.contact-link {
 /* Footer */
 .footer-container {
   font-family: "Rubik", sans-serif;
-  font-weight: 500;
   background: #b0c4de;
   text-align: center;
   display: block;
@@ -184,7 +183,10 @@ a.footer-link {
 a.footer-link:hover {
   color: #766563;
 }
-
+hr {
+  width: 70%;
+  margin: auto;
+}
 /* Learn More button */
 * {
   box-sizing: border-box;
